--- a/Chat_App/dockerfile
+++ b/Chat_App/dockerfile
@@ -1,4 +1,12 @@
 FROM rocker/r-ver:3.5.0
+#add Ngnix for reverse proxy & authentication then apache2-utils for user management
+RUN apt-get update && \
+    apt-get install -y nginx apache2-utils && \
+    htpasswd -bc /etc/nginx/.htpasswd test test 
+
+RUN openssl req -batch -x509 -nodes -days 365 -newkey rsa:2048 \
+        -keyout /etc/ssl/private/server.key \
+        -out /etc/ssl/private/server.crt
 
 RUN apt-get update \
   && apt-get install -y --no-install-recommends \
@@ -19,11 +27,17 @@ RUN apt-get update \
 	libsm6  \
 	libxrender1 \
 	bzip2 \
-    apache2 \
     zlib1g-dev \
     && apt-get clean \
-    && rm -rf /var/lib/apt/lists/ 
-    
+    && rm -rf /var/lib/apt/lists/   
+
+RUN R -e "install.packages('grDevices')"   
+RUN R -e "install.packages('jsonlite')"
+RUN R -e "install.packages('digest')"
+RUN R -e "install.packages('htmltools')"
+RUN R -e "install.packages('jquerylib')"
+RUN R -e "install.packages('rlang')"
+RUN R -e "install.packages('magrittr')"
 RUN R -e "install.packages('SnowballC')"
 RUN R -e "install.packages('tm')"
 RUN R -e "install.packages('tidytext')"
@@ -36,15 +50,17 @@ RUN R -e "install.packages('openssl')"
 RUN R -e "install.packages('shiny')"
 RUN R -e "install.packages('Rtools')"
 RUN R -e "install.packages('httr')"
-RUN R -e "install.packages('sass')"
-RUN R -e "install.packages('bslib',dependencies=TRUE)"
-RUN R -e "install.packages('thematic',dependencies=TRUE)"
 RUN R -e "install.packages('shinydashboard')"
 RUN R -e "install.packages('lubridate')"
 RUN R -e "install.packages('dplyr')"
+RUN R -e "install.packages('sass')"
+RUN R -e "install.packages('bslib')"
+RUN R -e "install.packages('thematic')"
+        
+ADD ./nginx.conf /etc/nginx/nginx.conf
 
 COPY / /
 
 EXPOSE 80 443
 
-CMD "R" "-e" "shiny::runApp('app.R', options = list(port = '3838'))"
+CMD service nginx start && ["R", "-e", "shiny::runApp('app.R', host='0.0.0.0', port=3838)"]
