--- a/Chat_App/nginx.conf
+++ b/Chat_App/nginx.conf
@@ -6,7 +6,7 @@ events {
 }
 
 http {
-  
+
     server {
         listen 80;
         return 301 https://$host$request_uri;
@@ -22,6 +22,9 @@ http {
     
         location / {
             proxy_pass http://127.0.0.1:3838/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
   } 
 }
