--- a/Chat_App/dockerfile
+++ b/Chat_App/dockerfile
@@ -56,6 +56,8 @@ RUN R -e "install.packages('dplyr')"
 RUN R -e "install.packages('sass')"
 RUN R -e "install.packages('bslib')"
 RUN R -e "install.packages('thematic')"
+RUN R -e "install.packages('ggplot2')"
+RUN R -e "install.packages('DataEditR')"
         
 ADD ./nginx.conf /etc/nginx/nginx.conf
 
