added shinywidgets and to dockerfile added ga script fixed logging issue added new category

--- a/Chat_App/dockerfile
+++ b/Chat_App/dockerfile
@@ -58,6 +58,7 @@ RUN R -e "install.packages('bslib')"
 RUN R -e "install.packages('thematic')"
 RUN R -e "install.packages('ggplot2')"
 RUN R -e "install.packages('tidyr')"
+RUN R -e "install.packages('shinyWidgets')"
         
 ADD ./nginx.conf /etc/nginx/nginx.conf
 
